--- a/index.html
+++ b/index.html
@@ -66,20 +66,17 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Senior Web Developer</h3>
-                        <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
-                            User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                        <h3 class="mb-0">Software Developer</h3>
+                        <div class="subheading mb-3">Dream Dimension</div>
+                        <p>I began develop with Angular 8 to Frontend, later I also created new projects with Bootstrap 4, JQuery, PHP7 and Wordpress.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">November 2019 - Present</span></div>
                 </div>
-
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Senior Web Developer</h3>
-                        <div class="subheading mb-3">Intelitec Solutions</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
-                            User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                        <h3 class="mb-0">Full Stack LAMP</h3>
+                        <div class="subheading mb-3">Hormiga Tinta</div>
+                        <p>I worked with CodeIgniter 3, Laravel 5, VueJS 2, HTML5, CSS3, Bootstrap 4, JQuery, PHP7 and Wordpress. I gave maintenance and created some websites </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">June 2019 - November 2019</span></div>
                 </div>
@@ -87,8 +84,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Software Developer</h3>
                         <div class="subheading mb-3">Gisea</div>
-                        <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.
-                            User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                        <p>I created and gave maintenance websites using HTML5, CSS3, JQuery, Bootstrap4, PHP7, SQL, Laravel5, Composer, git & github. I was a speaker in workshops at some universities and trained junior developers </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">January 2019 - June 2019</span></div>
                 </div>
