--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span> Agile Development & Scrum
                     </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span> Linux(Debian & Red hat): Ubuntu, Mint, Fedora & Centos. Cloud computing service: Heroku
+                    </li>
                 </ul>
             </div>
         </section>
@@ -180,8 +183,9 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>blablabla</p>
-                <p class="mb-0">blsblabla</p>
+                <p>1hr per day I practice english but also the saturdays but more hours because I have language partners around the world and I love to know new cultures. Sometimes I cooking because I like to taste new dishes and I see korean series and
+                    international documentaries about history, economy and international relationships</p>
+                <p class="mb-0">Also I always do some programming courses because the technologies change very fast.</p>
             </div>
         </section>
         <hr class="m-0" />
@@ -191,30 +195,16 @@
                 <h2 class="mb-5">Awards & Certifications</h2>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> Google Analytics Certified Developer
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> English A2 PET
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> Mobile Web Specialist - Google Certification
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> Leadership and Performance: Instituto tecnológico de Estudios Superiores de Monterrey (ITESM)
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> 1
-                        <sup>st</sup> Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> 1 Young Entrepreneurs” , Secretary of Economics and business incubator Universidad autónoma del Estado de Morelos (UAEM).
                     </li>
                     <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> 1
-                        <sup>st</sup> Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> 2
-                        <sup>nd</sup> Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> 1
-                        <sup>st</sup> Place - James Buchanan High School - Hackathon 2006
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> 3
-                        <sup>rd</sup> Place - James Buchanan High School - Hackathon 2005
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> 68th place out of 18,000 in the kupit brokerage competition of the Mexican stock exchange.
                     </li>
                 </ul>
             </div>
