--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 </div>
                 <p class="lead mb-5 animate__animated animate__slideInRight">I'm software developer, I have worked in different positions like mockup, frontend and backend developer, also I am experienced with agile frameworks. </p>
                 <div class="social-icons animate__animated animate__slideInUp">
-                    <a class="social-icon linkedin" href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/"><i class="fab fa-linkedin-in fa-rotate-180"></i></a>
-                    <a class="social-icon github" href="https://github.com/rych182"><i class="fab fa-github fa-rotate-180"></i></a>
-                    <a class="social-icon twitter" href="https://twitter.com/Rych182"><i class="fab fa-twitter fa-rotate-180"></i></a>
+                    <a class="social-icon linkedin" href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank"><i class="fab fa-linkedin-in fa-rotate-180"></i></a>
+                    <a class="social-icon github" href="https://github.com/rych182" target="_blank"><i class="fab fa-github fa-rotate-180"></i></a>
+                    <a class="social-icon twitter" href="https://twitter.com/Rych182" target="_blank"><i class="fab fa-twitter fa-rotate-180"></i></a>
                 </div>
             </div>
         </section>
@@ -143,20 +143,20 @@
                 <h2 class="mb-5">Skills</h2>
                 <div class="subheading mb-3">Programming Languages & Tools</div>
                 <ul class="list-inline dev-icons">
-                    <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-php"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-html5" style="color: blue;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-css3-alt" style="color: green;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-js-square" style="color: yellow;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-angular" style="color: red;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-react" style="color: blue;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-node-js" style="color: green;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-sass" style="color: pink;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-php" style="color: purple;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-github-square"></i></li>
-                    <li class="list-inline-item"><i class="fab fa-git-square"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-gulp" style="color: red;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-bootstrap" style="color: purple;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-npm" style="color: red;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-github-square" style="color: purple;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-git-square" style="color: orange;"></i></li>
                 </ul>
                 <div class="subheading mb-3">Other tools & skills</div>
                 <ul class="fa-ul mb-0">
