actualización con figma

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Portfolio</h3>
+                        <ol>
+                            <li><a href="https://www.figma.com/file/LMTGB7eM3RcDeKKZWIfJrE/Garrido-Real-State?node-id=0%3A1" target="_blank">Figma design</a></li>
+                            <li><a href="https://rych182.github.io/vuejs-fundaments/" target="_blank">Vue JS Project</a> JS framework</li>
+                            <li><a href="http://">Real state layout</a> Bootstrap 4</li>
+                            <li></li>
+                            <li></li>
+                        </ol>
+
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">November 2019 - Present</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Software Developer</h3>
                         <div class="subheading mb-3">Dream Dimension</div>
                         <p>I began develop with Angular 8 to Frontend, later I also created new projects with Bootstrap 4, JQuery, PHP7 and Wordpress.</p>
