--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
                         <h3 class="mb-0">Portfolio</h3>
                         <ol>
                             <li><a href="https://www.figma.com/file/LMTGB7eM3RcDeKKZWIfJrE/Garrido-Real-State?node-id=0%3A1" target="_blank">Figma design</a></li>
+                            <li>
+                                <a href="figma-layout/index.html" target="_blank">Figma Layout</a> with html5 y css3
+                            </li>
                             <li><a href="https://rych182.github.io/vuejs-fundaments/" target="_blank">Vue JS Project</a> JS framework</li>
                             <li><a href="http://">Real state layout</a> Bootstrap 4</li>
-                            <li></li>
+
                             <li></li>
                         </ol>
 
