real state layout

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <a href="figma-layout/index.html" target="_blank">Figma Layout</a> with html5 y css3
                             </li>
                             <li><a href="https://rych182.github.io/vuejs-fundaments/" target="_blank">Vue JS Project</a> JS framework</li>
-                            <li><a href="http://">Real state layout</a> Bootstrap 4</li>
+                            <li><a href="layouts-bootstrap/real-state/index.html">Real state layout</a> Bootstrap 4</li>
 
                             <li></li>
                         </ol>
