--- a/layouts-bootstrap/real-state/index.html
+++ b/layouts-bootstrap/real-state/index.html
@@ -238,6 +238,124 @@
         </div>
         <!-- row -->
     </section>
+
+    <section class="encuentra mt-5">
+        <div class="container">
+            <div class="row text-light align-items-center">
+                <div class="col">
+                    <h3>Encuentra la casa de tus sueños</h3>
+                    <p>Llena el formulario de contaxto y un asesor se pondrá en contacto a la brevedad</p>
+                    <a href="#" class="btn btn-warning text-uppercase py-2 mt-4">Contactanos</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8">
+                <h2 class="text-center mb-5">Nuestro Blog</h2>
+
+                <div class="row entrada mb-4">
+                    <div class="col-md-5">
+                        <img src="img/blog1.jpg" class="img-fluid" alt="entrada blog">
+                    </div>
+                    <div class="col-md-7">
+                        <h3 class="my-2">Terraza en el techo de tu casa</h3>
+                        <p class="meta">
+                            Escrito el: <span>20/10/2021</span> por <span>Admin</span>
+                        </p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae pariatur ut vel ab harum eveniet exercitationem, atque, possimus odio ea voluptate, ipsam magnam quidem quae excepturi ipsum illum voluptatum explicabo!</p>
+                        <a href="#" class="btn btn-success py-2 px-5">Leer más</a>
+                    </div>
+                </div>
+                <div class="row entrada mb-4">
+                    <div class="col-md-5">
+                        <img src="img/blog2.jpg" class="img-fluid" alt="entrada blog">
+                    </div>
+                    <div class="col-md-7">
+                        <h3 class="my-2">Guía para decorar tu casa</h3>
+                        <p class="meta">
+                            Escrito el: <span>20/10/2021</span> por <span>Admin</span>
+                        </p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae pariatur ut vel ab harum eveniet exercitationem, atque, possimus odio ea voluptate, ipsam magnam quidem quae excepturi ipsum illum voluptatum explicabo!</p>
+                        <a href="#" class="btn btn-success py-2 px-5">Leer más</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h2 class="text-center mb-5">Testimoniales</h2>
+
+                <div class="testimoniales p-5">
+                    <!--
+                    <div id="testimoniales" class="carousel slide" data-ride="carousel">
+                        <div id="carousel-inner">
+                            <div class="carousel-item active">
+                                <p class="testimonial-texto">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro aut rerum fugiat. Ex sequi, delectus repellat nisi impedit, nemo natus ullam pariatur, consequuntur esse tempora optio laborum! Aspernatur.
+                                    <span class="d-block text-right mt-4">- Persona 1</span>
+                                </p>
+                            </div>
+                            <div class="carousel-item">
+                                <p class="testimonial-texto">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro aut rerum fugiat. Ex sequi, delectus repellat nisi impedit, nemo natus ullam pariatur, consequuntur esse tempora optio laborum! Aspernatur.
+                                    <span class="d-block text-right mt-4">- Persona 2</span>
+                                </p>
+                            </div>
+                            <div class="carousel-item">
+                                <p class="testimonial-texto">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro aut rerum fugiat. Ex sequi, delectus repellat nisi impedit, nemo natus ullam pariatur, consequuntur esse tempora optio laborum! Aspernatur.
+                                    <span class="d-block text-right mt-4">- Persona 3</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>-->
+
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <p class="testimonial-texto text-light">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro aut rerum fugiat. Ex sequi, delectus repellat nisi impedit, nemo natus ullam pariatur, consequuntur esse tempora optio laborum! Aspernatur.
+                                    <span class="d-block text-right mt-4">- Persona 1</span>
+                                </p>
+                            </div>
+                            <div class="carousel-item">
+                                <p class="testimonial-texto text-light">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro aut rerum fugiat. Ex sequi, delectus repellat nisi impedit, nemo natus ullam pariatur, consequuntur esse tempora optio laborum! Aspernatur.
+                                    <span class="d-block text-right mt-4">- Persona 2</span>
+                                </p>
+                            </div>
+                            <div class="carousel-item">
+                                <p class="testimonial-texto text-light">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim tempora porro aut rerum fugiat. Ex sequi, delectus repellat nisi impedit, nemo natus ullam pariatur, consequuntur esse tempora optio laborum! Aspernatur.
+                                    <span class="d-block text-right mt-4">- Persona 3</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer bg-dark mt-5 py-4">
+        <div class="container">
+            <div class="row">
+                <!--flex-sm-row sirve para que se alinie bien cuando esta en desktop-->
+                <ul class="nav col flex-column flex-md-row text-center">
+                    <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Anuncios</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+                </ul>
+                <!--text-md-right para que en grande este del lado derecho-->
+                <p class="copyright text-light col-md-4 text-center text-md-right m-0 mt-2">
+                    2021. Derechos reservados
+                </p>
+            </div>
+        </div>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
