--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
                             </li>
                             <li><a href="https://rych182.github.io/vuejs-fundaments/" target="_blank">Vue JS Project</a> JS framework</li>
                             <li><a href="layouts-bootstrap/real-state/index.html">Real state layout</a> Bootstrap 4</li>
-
-                            <li></li>
+                            <li><a href="layouts-bootstrap/arquitectura/index.html">Arquitectura page</a> Layout with Bootstrap 4</li>
+                            <li><a href="layouts-bootstrap/ecommerce-muebles/index.html">e-Commerce layout</a> with Bootstrap 4</li>
+                            <li>
+                                <a href=""></a>
+                            </li>
                         </ol>
 
                     </div>
