--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                     <a class="social-icon linkedin" href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank"><i class="fab fa-linkedin-in fa-rotate-180"></i></a>
                     <a class="social-icon github" href="https://github.com/rych182" target="_blank"><i class="fab fa-github fa-rotate-180"></i></a>
                     <a class="social-icon twitter" href="https://twitter.com/Rych182" target="_blank"><i class="fab fa-twitter fa-rotate-180"></i></a>
+                    <a class="social-icon medium" href="https://medium.com/@Rych182" target="_blank"><i class="fab fa-medium fa-rotate-180"></i></a>
+                    <a class="social-icon github" href="https://github.com/rych182" target="_blank"><i class="fab fa-dev fa-rotate-180"></i></a>
                 </div>
             </div>
         </section>
