--- a/layouts-bootstrap/real-state/index.html
+++ b/layouts-bootstrap/real-state/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110135132-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110135132-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-110135132-1');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-110135132-1');
+    </script>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -22,7 +25,7 @@
 </head>
 
 <body>
-    
+
     <!--EL header rodea el menu y el slider para poderlo poner como posición relativa y la barra la como position absolute-->
     <header class="header">
         <div class="barra bg-dark">
