--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a class="social-icon github" href="https://github.com/rych182" target="_blank"><i class="fab fa-github fa-rotate-180"></i></a>
                     <a class="social-icon twitter" href="https://twitter.com/Rych182" target="_blank"><i class="fab fa-twitter fa-rotate-180"></i></a>
                     <a class="social-icon medium" href="https://medium.com/@Rych182" target="_blank"><i class="fab fa-medium fa-rotate-180"></i></a>
-                    <a class="social-icon github" href="https://github.com/rych182" target="_blank"><i class="fab fa-dev fa-rotate-180"></i></a>
+                    <a class="social-icon github" href="https://dev.to/rych182" target="_blank"><i class="fab fa-dev fa-rotate-180"></i></a>
                 </div>
             </div>
         </section>
