I added new icons

--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
                     Cuernavaca Morelos Mexico ·
                     <a href="mailto:name@email.com">ricgarridoc@hotmail.com</a>
                 </div>
-                <p class="lead mb-5 animate__animated animate__slideInRight">I'm software developer, I have worked in different positions like mockup, frontend and backend developer, also I am experienced with agile frameworks. </p>
+                <p class="lead mb-5 animate__animated animate__slideInRight">I'm a software developer, I have worked in different positions like mockup, frontend and backend developer, also I am experienced with agile frameworks. </p>
                 <div class="social-icons animate__animated animate__slideInUp">
                     <a class="social-icon linkedin" href="https://www.linkedin.com/in/ricardo-garrido-a2a1b167/" target="_blank"><i class="fab fa-linkedin-in fa-rotate-180"></i></a>
                     <a class="social-icon github" href="https://github.com/rych182" target="_blank"><i class="fab fa-github fa-rotate-180"></i></a>
                     <a class="social-icon twitter" href="https://twitter.com/Rych182" target="_blank"><i class="fab fa-twitter fa-rotate-180"></i></a>
                     <a class="social-icon medium" href="https://medium.com/@Rych182" target="_blank"><i class="fab fa-medium fa-rotate-180"></i></a>
-                    <a class="social-icon github" href="https://dev.to/rych182" target="_blank"><i class="fab fa-dev fa-rotate-180"></i></a>
+                    <a class="social-icon dev" href="https://dev.to/rych182" target="_blank"><i class="fab fa-dev fa-rotate-180"></i></a>
+                    <a class="social-icon dev" href="https://www.codementor.io/@rych182" target="_blank"><i class="fas fa-chalkboard-teacher fa-rotate-180"></i></a>
                 </div>
             </div>
         </section>
